# arma3-builder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/maps/: Altis.json  Tanoa.json  VR.json
data/seed_biki/: cba_statemachine.md  sample_command.md
data/seed_classnames/: rhsusf.json  vanilla.json
examples/: sample_brief.json  sample_campaign.json
scripts/: demo.py  ingest_biki.py  ingest_mod.py  ingest_pbo.py
src/arma3_builder/: __init__.py  cli.py  config.py  main.py
src/arma3_builder/agents/: __init__.py  base.py  config_master.py  critic.py  narrative.py  orchestrator.py  qa.py  scripter.py
src/arma3_builder/api/: __init__.py  events.py  routes.py  schemas.py
src/arma3_builder/arma/: __init__.py  ace_medical.py  arsenal.py  behaviour.py  briefing.py  campaign.py  characters.py  classnames.py  compositions.py  cutscene.py  description_ext.py  dialog.py  fsm.py  init_scripts.py  launcher.py  loadout.py  maps.py  music.py  packager.py  persistence.py  reinforcements.py  sqm.py  sqm_import.py  stringtable.py  support.py  worldflags.py
tests/: conftest.py  test_api.py  test_arma_sqm.py  test_audit_fixes.py  test_briefing.py  test_campaign.py  test_description_ext.py  test_dialog.py  test_diff.py  test_fsm.py  test_init_scripts.py  test_launcher.py  test_llm_gemini.py  test_persistence.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_pipeline.py  test_qa.py  test_rag.py  test_refine.py  test_score.py  test_sqm_eden.py  test_stringtable.py  test_templates.py  test_unknown_classname.py
(+34 files in other folders)
